force-app/main/default/objects/Location_Site_Safety__c/Location_Site_Safety__c.object-meta.xml
<CustomObject>
    <label>Location Site Safety</label>
    <nameField>
        <label>Location Site Safety</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations Site Safety</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>