force-app/main/default/objects/Location_Site_Safety__c/fields/date_effective__c.field-meta.xml
<CustomField>
    <fullName>date_effective__c</fullName>
    <label>date_effective</label>
    <type>Date</type>
</CustomField>