force-app/main/default/objects/Location_Site_Safety__c/fields/ground_vendor__c.field-meta.xml
<CustomField>
    <fullName>ground_vendor__c</fullName>
    <label>ground_vendor</label>
    <length>64</length>
    <type>Text</type>
</CustomField>