force-app/main/default/objects/Location_Site_Safety__c/fields/ground_vendor_id__c.field-meta.xml
<CustomField>
    <fullName>ground_vendor_id__c</fullName>
    <label>ground_vendor_id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>