force-app/main/default/objects/Location_Site_Safety__c/fields/Lease_Number__c.field-meta.xml
<CustomField>
    <fullName>Lease_Number__c</fullName>
    <label>Lease Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>