force-app/main/default/objects/Location_Site_Safety__c/fields/location_code__c.field-meta.xml
<CustomField>
    <fullName>location_code__c</fullName>
    <label>location_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>