force-app/main/default/objects/Location_Site_Safety__c/fields/lte_site_on_air_dt__c.field-meta.xml
<CustomField>
    <fullName>lte_site_on_air_dt__c</fullName>
    <label>lte_site_on_air_dt</label>
    <type>Date</type>
</CustomField>