force-app/main/default/objects/Location_Site_Safety__c/fields/mkt_name__c.field-meta.xml
<CustomField>
    <fullName>mkt_name__c</fullName>
    <label>mkt_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>