force-app/main/default/objects/Location_Site_Safety__c/fields/notes__c.field-meta.xml
<CustomField>
    <fullName>notes__c</fullName>
    <label>notes</label>
    <type>TextArea</type>
</CustomField>