force-app/main/default/objects/Location_Site_Safety__c/fields/Owner_Company__c.field-meta.xml
<CustomField>
    <fullName>Owner_Company__c</fullName>
    <label>Owner Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>