force-app/main/default/objects/Location_Site_Safety__c/fields/Owner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Owner_Contact__c</fullName>
    <label>Owner Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>