force-app/main/default/objects/Location_Site_Safety__c/fields/region_name__c.field-meta.xml
<CustomField>
    <fullName>region_name__c</fullName>
    <label>region_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>