force-app/main/default/objects/Location_Site_Safety__c/fields/site_status__c.field-meta.xml
<CustomField>
    <fullName>site_status__c</fullName>
    <label>site_status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>