force-app/main/default/objects/Location_Site_Safety__c/fields/Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_ID__c</fullName>
    <label>Source ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>