force-app/main/default/objects/Location_Site_Safety__c/fields/structure_vendor_prev__c.field-meta.xml
<CustomField>
    <fullName>structure_vendor_prev__c</fullName>
    <label>structure_vendor_prev</label>
    <length>64</length>
    <type>Text</type>
</CustomField>