force-app/main/default/objects/Location_Site_Safety__c/fields/structure_vendor_role__c.field-meta.xml
<CustomField>
    <fullName>structure_vendor_role__c</fullName>
    <label>structure_vendor_role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>