force-app/main/default/objects/Location_Site_Safety__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Office</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Warehouse - Commercial</fullName>
            </value>
            <value>
                <fullName>Network ER Warehouse</fullName>
            </value>
            <value>
                <fullName>Warehouse - Technical</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Earth Station</fullName>
            </value>
            <value>
                <fullName>Headquarter</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Structure</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>